--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      MODEL: gpt-4o-mini
+      MODEL: gpt-4o
     steps:
       - name: Checkout
         uses: actions/checkout@v4
