--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -2,7 +2,7 @@ name: Vibing Agent
 
 on:
   schedule:
-    - cron: "* * * * *"  # attempt every minute; GitHub may throttle to ~5m
+    - cron: "0 * * * *"  # hourly at minute 0
   workflow_dispatch:
 
 permissions:
